    * 0644 adva_fsp_if: instead of lower warning and critical levels check now supports lower and upper levels
            NOTE: Please refer to the migration notes!
    * 1006 printer_pages: add Perf-O-Meter and PNP template
    * 0646 brocade_fcport: the administrative states for which ports are inventorized can now be configured in WATO
    * 1051 FIX: tcp_conn_stats: fix missing performance data...
    * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
    * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
    * 0187 FIX: hp_proliant_power: Fixed Wato configuration
    * 0192 FIX: oracle_rman_backups: Not longer try to make a inventory for broken plugin outputs
    * 0194 FIX: raritan_pdu_inlet: Check now outputs the correct values...
            NOTE: Please refer to the migration notes!
    * 1071 FIX: oracle_rman_backups: Only inventorize ARCHIVELOG / DB FULL / DB INCR entries...
    * 0195 FIX: fc_port: Check temporary disabled cause of problems with automatic detection...
            NOTE: Please refer to the migration notes!
    * 1152 FIX: mk-job: The check now captures currently running jobs and their start time...
    * 0198 FIX: cisco_temp_sensor: Removed dicey detection for temperature value....
    * 0645 FIX: brocade_fcport: since in newer firmware (7.*) swFCPortSpeed is deprecated, we then calculate port speed from IF-MIB::ifHighSpeed
    * 0647 FIX: printer_input, printer_output: multiple fixes to algorithm for state determination and inventory function...
    * 1097 FIX: windows_agent: preventing missing agent sections on first query...
    * 1009 FIX: df: deal with space in file system type for PlayStation file system...

    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception